--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ padding: 3px;
 .container2 {
   background-color: white;
   /* min-width: 500px; */
-  width: 900px;
+  /* width: 900px; */
   max-width: 1000px;
   min-height: 900px;
  border-radius: 3px;
